@@ -55,7 +55,7 @@ setup(
         'zeit.content.advertisement',
         'zeit.content.article',
         'zeit.content.author',
-        'zeit.content.cp>=3.3.3',
+        'zeit.content.cp>=3.4.0.dev0',
         'zeit.content.dynamicfolder',
         'zeit.content.gallery',
         'zeit.content.image',
