@@ -1,0 +1,6 @@
+<section class="frame">
+    {% if module.title %}
+        <h2 class="frame__title visually-hidden">{{ module.title }}</h2>
+    {% endif %}
+    <iframe class="frame__iframe" src="{{ module.url }}"></iframe>
+</section>
